<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6E9"
    tools:ignore="ExtraText"
    tools:context=".edit_petActivity">


    <!-- Left Arrow Image -->
    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/back"
        android:src="@drawable/left_arrow_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view3"
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_margin="16dp"
        android:background="@drawable/violet_rectangle"
        android:rotation="6.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <View
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_rectangle"
        android:rotation="-4.48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="91dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="center"
        android:text="@string/pet_details"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:background="@drawable/et_blue"
        android:drawableStart="@drawable/pet_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="start|center_vertical"
        android:hint="@string/name"
        android:textColorHint="#808080"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="31dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:ignore="Autofill,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="28dp"
        android:background="@drawable/et_blue"
        android:drawableStart="@drawable/dob_calendar"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="start|center_vertical"
        android:hint="@string/birth_of_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="31dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_blue"
        android:drawableStart="@drawable/footprint_small"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="start|center_vertical"
        android:hint="@string/breed"
        android:textColorHint="#808080"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="31dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:ignore="Autofill,MissingConstraints,TextFields" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:background="@drawable/et_blue"
        android:drawableStart="@drawable/color"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="start|center_vertical"
        android:hint="@string/color"
        android:textColorHint="#808080"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="31dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        tools:ignore="Autofill,MissingConstraints,TextFields"
        tools:layout_editor_absoluteY="415dp" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="center"
        android:text="@string/gender"
        android:textColor="#000000"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="498dp" />

    <CheckBox
        android:id="@+id/checkBoxF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/female"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="557dp" />

    <CheckBox
        android:id="@+id/checkBoxM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/male"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="557dp" />

    <CheckBox
        android:id="@+id/checkBoxIndoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/indoor"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/indoor"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="623dp" />

    <CheckBox
        android:id="@+id/checkBoxOutdoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/outdoor"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/outdoor"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="619dp" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="center"
        android:text="@string/is_your_pet_neutered_spayed"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="676dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/yes"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="712dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/no"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="712dp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="333dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_background2"
        android:fontFamily="@font/crimson_text_bold"
        android:text="@string/save"
        android:textColor="#ffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="772dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>