<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6E9"
    tools:context=".edit_microchipActivity"
    tools:ignore="ExtraText">

    <!-- Left Arrow Image -->
    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/back"
        android:src="@drawable/left_arrow_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_margin="16dp"
        android:background="@drawable/violet_rectangle"
        android:rotation="6.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <View
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_rectangle"
        android:rotation="-4.48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="91dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="center"
        android:text="@string/microchip_details"
        android:textColor="#FFFFFF"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="100dp"
        android:background="@drawable/et_blue"
        android:drawableStart="@drawable/micro_provider"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="start|center_vertical"
        android:hint="@string/microchip_provider"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="31dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="Autofill,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="36dp"
        android:background="@drawable/et_blue"
        android:drawableStart="@drawable/chip_id"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="start|center_vertical"
        android:hint="@string/chip_id"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="31dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="Autofill,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="48dp"
        android:background="@drawable/et_blue"
        android:drawableStart="@drawable/dob_calendar"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:gravity="start|center_vertical"
        android:hint="@string/date_of_microchipping"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="31dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="Autofill,MissingConstraints" />

    <Button
        android:id="@+id/button21"
        android:layout_width="333dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_background2"
        android:fontFamily="@font/crimson_text_bold"
        android:text="@string/save"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp" />

</androidx.constraintlayout.widget.ConstraintLayout>