<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#604CC3"
    tools:context=".pet_profileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view4"
                android:layout_width="276dp"
                android:layout_height="63dp"
                android:layout_margin="16dp"
                android:background="@drawable/blue_rectangle"
                android:rotation="6.07"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.054" />

            <View
                android:layout_width="276dp"
                android:layout_height="63dp"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_rectangle"
                android:rotation="-4.48"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.053" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/crimson_text_semibold"
                android:gravity="center"
                android:text="@string/pet_features"
                android:textColor="#FFFFFF"
                android:textSize="38sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cuteCatImage"
                android:layout_width="200dp"
                android:layout_height="195.24dp"
                android:layout_marginTop="20dp"
                android:contentDescription="Add image"
                android:src="@drawable/cute_cat"
                app:layout_constraintBottom_toTopOf="@+id/buttonPetDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView46"
                app:layout_constraintVertical_bias="0.011"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="160dp"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_add_a_photo_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonPetDetails"
                android:layout_width="333dp"
                android:layout_height="90dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_background"
                android:drawableStart="@drawable/cat_footprint"
                android:drawablePadding="10dp"
                android:fontFamily="@font/crimson_text_bold"
                android:paddingStart="5dp"
                android:paddingEnd="31dp"
                android:text="@string/pet_details"
                android:textColor="#000000"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cameraIcon" />

            <Button
                android:id="@+id/buttonMicrochip"
                android:layout_width="333dp"
                android:layout_height="90dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_background"
                android:drawableStart="@drawable/microchip"
                android:drawablePadding="10dp"
                android:fontFamily="@font/crimson_text_bold"
                android:paddingStart="5dp"
                android:paddingEnd="31dp"
                android:text="@string/microchip"
                android:textColor="#000000"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonPetDetails"
                app:layout_constraintStart_toStartOf="@+id/buttonPetDetails"
                app:layout_constraintTop_toBottomOf="@+id/buttonPetDetails" />

            <Button
                android:id="@+id/buttonInsurance"
                android:layout_width="333dp"
                android:layout_height="90dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_background"
                android:drawableStart="@drawable/insurance"
                android:drawablePadding="10dp"
                android:fontFamily="@font/crimson_text_bold"
                android:paddingStart="5dp"
                android:paddingEnd="29dp"
                android:text="@string/insurance"
                android:textColor="#000000"
                android:textSize="33sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonMicrochip"
                app:layout_constraintHorizontal_bias="0.138"
                app:layout_constraintStart_toStartOf="@+id/buttonMicrochip"
                app:layout_constraintTop_toBottomOf="@+id/buttonMicrochip" />

            <Button
                android:id="@+id/buttonLicense"
                android:layout_width="333dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:drawableStart="@drawable/license_id"
                android:drawablePadding="10dp"
                android:fontFamily="@font/crimson_text_bold"
                android:paddingStart="16dp"
                android:paddingEnd="35dp"
                android:text="@string/license"
                android:textColor="#000000"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonInsurance"
                app:layout_constraintStart_toStartOf="@+id/buttonInsurance"
                app:layout_constraintTop_toBottomOf="@+id/buttonInsurance" />

            <ImageView
                android:id="@+id/leftArrow"
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:contentDescription="@string/back"
                android:src="@drawable/left_arrow_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
